-"Naručivanje" napokon radi

--- a/Mic/Views/Categories/Create.cshtml
+++ b/Mic/Views/Categories/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Kreirajte svoju vrstu mačke ako nije već ponuđena</h1>
 
 <h4>Category</h4>
 <hr />
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Kreiraj novu vrstu" class="btn btn-primary" />
             </div>
         </form>
     </div>
