--- a/Mic/Views/Cats/Edit.cshtml
+++ b/Mic/Views/Cats/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Uredi</h1>
 
-<h4>Cat</h4>
+<h4>Mjau</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -65,14 +65,14 @@
             </div>
           
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Spremi" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Nazad na listu mica</a>
 </div>
 
 @section Scripts {
