--- a/Mic/Views/Shared/_Layout.cshtml
+++ b/Mic/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                             <li>
                                 @await Component.InvokeAsync("ShoppingCartSummary")
                             </li>
+                        <li>@await Html.PartialAsync("LoginPartial")</li>
                     </ul>
                 </div>
             </div>
