--- a/Mic/Views/Categories/Index.cshtml
+++ b/Mic/Views/Categories/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Vrste mačaka</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Kreirajte novu vrstu!</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CategoryId">Uredi</a> |
+                <a asp-action="Details" asp-route-id="@item.CategoryId">Detalji</a> |
+                <a asp-action="Delete" asp-route-id="@item.CategoryId">Izbriši</a>
             </td>
         </tr>
 }
