--- a/Mic/Views/Cats/Create.cshtml
+++ b/Mic/Views/Cats/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Stavi novu macu na usvajanje!</h1>
 
-<h4>Cat</h4>
+<h4>Mjau</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -63,7 +63,7 @@
             </div>
           
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Potvrdi" class="btn btn-primary" />
             </div>
         </form>
     </div>
