--- a/Mic/Views/Cats/Delete.cshtml
+++ b/Mic/Views/Cats/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Brisanje</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jeste li sigurni da želite obrisati ovu micu?</h3>
 <div>
     <h4>Cat</h4>
     <hr />
@@ -75,7 +75,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CatId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Obriši" class="btn btn-danger" /> |
+        <a asp-action="Index">Nazad na listu mica</a>
     </form>
 </div>
