--- a/Mic/Views/Cats/Details.cshtml
+++ b/Mic/Views/Cats/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalji mačke:</h1>
 
 <div>
-    <h4>Cat</h4>
+    <h4>Mic</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -73,6 +73,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CatId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.CatId">Uredi</a> |
+    <a asp-action="Index">Nazad na listu ponuđenih mica</a>
 </div>
