--- a/Mic/Views/Order/Checkout.cshtml
+++ b/Mic/Views/Order/Checkout.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Mic.Models.Order
 
 <div class="row orderForm ">
-    <h3 class="text-center">You are just one step away from ordering your drinks.</h3>
+    <h3 class="text-center">Još samo jedan korak do usvajanja mice!</h3>
     <br />
     </div>
 <div>
