--- a/Mic/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/Mic/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -3,10 +3,10 @@
 @if(Model.ShoppingCart.ShoppingCartItems.Count >0 )
 {<li>
     <a asp-controller="ShoppingCart">
-        <span class="btn-success"></span>
-        <span id="cart-status">
-            @Model.ShoppingCart.ShoppingCartItems.Count
-        </span>
+        <span class="btn btn-outline-info">Količina u košarici: @Model.ShoppingCart.ShoppingCartItems.Count</span>
+        @*<span id="cart-status">
+           
+        </span>*@
        </a>
     </li>
 }
