--- a/Mic/Views/Categories/Index.cshtml
+++ b/Mic/Views/Categories/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Vrste mačaka</h1>
 
 <p>
-    <a asp-action="Create">Kreirajte novu vrstu!</a>
+    <a asp-action="Create" class="btn btn-primary">Kreiraj novu vrstu!</a>
+  
 </p>
 <table class="table">
     <thead>
