--- a/Mic/Views/Home/Index.cshtml
+++ b/Mic/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="container"  >
     <div class="row"  >
         @foreach (var item in Model)
-        {<div class="col-3" style="border-spacing:30px 30px">
+        {<div class="col-3">
                 <div class="thumbnail">
                     <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" width="230" height="200" />
                     <div class="carousel-caption">
