--- a/Mic/Views/Order/CheckoutComplete.cshtml
+++ b/Mic/Views/Order/CheckoutComplete.cshtml
@@ -1,2 +1,3 @@
 ﻿<h1>@ViewBag.CheckoutCompleteMessage</h1>
-<h2>Kontaktirajte prodavača preko e-maila ovdje: </h2>
+<h2>Čestitamo usvojili ste micu! </h2>
+<h2>Maca će biti poslana na vašu kućnu adresu!</h2>
