--- a/Mic/Views/Cats/Delete.cshtml
+++ b/Mic/Views/Cats/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Jeste li sigurni da želite obrisati ovu micu?</h3>
 <div>
-    <h4>Cat</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -47,7 +47,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImageUrl)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageThumbnailUrl)
         </dt>
         <dd class = "col-sm-10">
@@ -61,7 +61,7 @@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InStock)
-        </dt>
+        </dt>*@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.InStock)
         </dd>
