--- a/Mic/Views/Cats/Details.cshtml
+++ b/Mic/Views/Cats/Details.cshtml
@@ -46,7 +46,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImageUrl)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageThumbnailUrl)
         </dt>
         <dd class = "col-sm-10">
@@ -54,10 +54,10 @@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsPreferredCat)
-        </dt>
-        <dd class = "col-sm-10">
+        </dt>*@
+        @*<dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsPreferredCat)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InStock)
         </dt>
