--- a/Mic/Views/Cats/Edit.cshtml
+++ b/Mic/Views/Cats/Edit.cshtml
@@ -43,16 +43,16 @@
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ImageThumbnailUrl" class="control-label"></label>
                 <input asp-for="ImageThumbnailUrl" class="form-control" />
                 <span asp-validation-for="ImageThumbnailUrl" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
+            </div>*@
+            @*<div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsPreferredCat" /> @Html.DisplayNameFor(model => model.IsPreferredCat)
                 </label>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="InStock" class="control-label"></label>
                 <input asp-for="InStock" class="form-control" />
