--- a/Mic/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/Mic/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -2,7 +2,7 @@
 
 @if(Model.ShoppingCart.ShoppingCartItems.Count >0 )
 {<li>
-    <a asp-controller="ShoppingCart">
+    <a asp-controller="ShoppingCart" action="Index">
         <span class="btn btn-outline-info">Količina u košarici: @Model.ShoppingCart.ShoppingCartItems.Count</span>
         @*<span id="cart-status">
            
