--- a/Mic/Views/ShoppingCart/Index.cshtml
+++ b/Mic/Views/ShoppingCart/Index.cshtml
@@ -23,7 +23,7 @@
                     <td class="text-right">
                         @((line.Amount * line.Cat.Price).ToString("c"))
                     </td>
-                    <td class="text-center"><a class="btn btn-danger" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-drinkId="@line.Cat.CatId">Ukloni</a></td>
+                    <td class="text-center"><a class="btn btn-danger" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-catId="@line.Cat.CatId">Ukloni</a></td>
                 </tr>
             }
         </tbody>
