--- a/Mic/Views/Cats/Create.cshtml
+++ b/Mic/Views/Cats/Create.cshtml
@@ -32,6 +32,18 @@
                 <input asp-for="LongDescription" class="form-control" />
                 <span asp-validation-for="LongDescription" class="text-danger"></span>
             </div>
+            @*<div class="form-group">
+                <label asp-for="Castrated" class="control-label"></label>
+                <input asp-for="Castrated" class="form-control" />
+                <span asp-validation-for="Castrated" class="text-danger"></span>
+            </div>*@
+
+            <div class="form-group form-check">
+                <label class="form-check-label" >
+                    <input class="form-check-input" asp-for="Castrated" /> @Html.DisplayNameFor(model => model.Castrated)
+                </label>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
@@ -43,15 +55,15 @@
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="ImageThumbnailUrl" class="control-label"></label>
-                <input asp-for="ImageThumbnailUrl" class="form-control" />
-                <span asp-validation-for="ImageThumbnailUrl" class="text-danger"></span>
-            </div>*@
+            <label asp-for="ImageThumbnailUrl" class="control-label"></label>
+            <input asp-for="ImageThumbnailUrl" class="form-control" />
+            <span asp-validation-for="ImageThumbnailUrl" class="text-danger"></span>
+        </div>*@
             @*<div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsPreferredCat" /> @Html.DisplayNameFor(model => model.IsPreferredCat)
-                </label>
-            </div>*@
+            <label class="form-check-label">
+                <input class="form-check-input" asp-for="IsPreferredCat" /> @Html.DisplayNameFor(model => model.IsPreferredCat)
+            </label>
+        </div>*@
             <div class="form-group">
                 <label asp-for="InStock" class="control-label"></label>
                 <input asp-for="InStock" class="form-control" />
@@ -59,9 +71,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
-          
+
             <div class="form-group">
                 <input type="submit" value="Potvrdi" class="btn btn-primary" />
             </div>
