--- a/Mic/wwwroot/css/site.css
+++ b/Mic/wwwroot/css/site.css
@@ -5,7 +5,12 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  font-style:italic;
 }
+
+.navbar-custom {
+    
+} 
 
 /* Provide sufficient contrast against white background */
 a {
