--- a/Mic/Views/Home/Index.cshtml
+++ b/Mic/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
     <h1 class="display-4">Dobrodošli! </h1>
 </div>
 
-<div class="card-deck">
+<div class="card-deck" id="Cats">
 
     @foreach (var cat in Model)
     {
@@ -89,4 +89,5 @@
         </div>
     }
 </div>
+
 
